# Changelog
All notable changes to this project will be documented in this file.

The format is loosely based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [0.17.0]
- Add hc logs to poll a log tail when access to server log stdout isn't available (single client polling only).

## [0.16.0]
- Fix missing pyserial dependency in package.
- Add hc setzero xyz to set zero on all axis.

## [0.15.0]
- Add hc jog status, scaling, and incremental imperial (default) and metric jogging.
- Add hc jog documentation
- Fix to have streaming job with control commands unwrap to be executed via immediate to have clean defered execution of immediate commands.
- Fix wait in streamer to help ensure the ? status wait mechanism doesn't bleed in the log output.
- Fix job queue clear on reset to avoid queued immediate command unexpectedly executing after a reset.
- Simplify jogger keycode to gcode case logic. Chunk keycode stripping is no longer needed.
- Cleanup log output on job sequence (inverted order).

## [0.14.0]
- Add real-time continuous Jog via keyboard input feed (arrow keys, ; and /).
- Add a queue wait to ensure complete streaming job execution before picking up the next job

## [0.13.2]
- Fix hc disconnect and abort procedure for immediate, device, and streamer (graceful termination).
- Update to disallow all $ commands on feed hold to avoid stalling immediate processing.
- Add error messages on error code exceptions.

## [0.13.1]
- Add hc jobs listing support
- Update home to be immediate rather than job streaming.
- Cleanup naming inconsistencies.

## [0.13.0]
- Add hc, a sample HCLI to enable streaming of G-Code to a CNC through a GRBL 1.1 compliant device.
- Fix parameter quoted string split argument problem

## [0.12.3]
- Fix edge case when system doesn't exist in the context.json.

## [0.12.2]
- Update README huckle usage documentation.

## [0.12.1]