@@ -9,7 +9,6 @@ import io
 import service
 from functools import partial
 from serial.tools import list_ports
-from collections import OrderedDict
 
 
 class CLI:
@@ -103,8 +102,7 @@ class CLI:
             return None
 
         elif self.commands[1] == "jobs":
-            reversal = OrderedDict(sorted(self.service.jobs().items(), reverse=True))
-            jobs = json.dumps(reversal, indent=4) + "\n"
+            jobs = json.dumps(self.service.jobs(), indent=4) + "\n"
 
             return io.BytesIO(jobs.encode("utf-8"))
         return None
